fix indents