@@ -58,6 +58,7 @@ import org.apache.commons.lang.time.DurationFormatUtils;
 import org.springframework.util.AntPathMatcher;
 
 public class WAStorageClient {
+
 	private static final Logger LOGGER = Logger.getLogger(WAStorageClient.class.getName());
 
 	/*
@@ -74,7 +75,7 @@ public class WAStorageClient {
 	/**
 	 * This method validates Storage Account credentials by checking for a dummy
 	 * conatiner existence.
-	 * 
+	 *
 	 * @param storageAccountName
 	 * @param storageAccountKey
 	 * @param blobEndPointURL
@@ -100,21 +101,14 @@ public class WAStorageClient {
 
 	/**
 	 * Returns reference of Windows Azure cloud blob container.
-	 * 
-	 * @param accName
-	 *            storage account name
-	 * @param key
-	 *            storage account primary access key
-	 * @param blobURL
-	 *            blob service endpoint url
-	 * @param containerName
-	 *            name of the container
-	 * @param createCnt
-	 *            Indicates if container needs to be created
-	 * @param allowRetry
-	 *            sets retry policy
-	 * @param cntPubAccess
-	 *            Permissions for container
+	 *
+	 * @param accName storage account name
+	 * @param key storage account primary access key
+	 * @param blobURL blob service endpoint url
+	 * @param containerName name of the container
+	 * @param createCnt Indicates if container needs to be created
+	 * @param allowRetry sets retry policy
+	 * @param cntPubAccess Permissions for container
 	 * @return reference of CloudBlobContainer
 	 * @throws URISyntaxException
 	 * @throws StorageException
@@ -127,7 +121,7 @@ public class WAStorageClient {
 		CloudStorageAccount cloudStorageAccount;
 		CloudBlobClient serviceClient;
 		CloudBlobContainer container;
-                CloudBlockBlob blob;
+		CloudBlockBlob blob;
 		StorageCredentialsAccountAndKey credentials;
 
 		credentials = new StorageCredentialsAccountAndKey(accName, key);
@@ -266,8 +260,7 @@ public class WAStorageClient {
 	 * blobItem; blobList.add(blobDir.getPrefix()); // list blobs again
 	 * getBlobDirectoryList(blobDir, blobList); } } } }
 	 */
-	
-	private static void upload(TaskListener listener, CloudBlockBlob blob, FilePath src) 
+	private static void upload(TaskListener listener, CloudBlockBlob blob, FilePath src)
 			throws StorageException, IOException, InterruptedException {
 		long startTime = System.currentTimeMillis();
 		InputStream inputStream = src.read();
@@ -282,30 +275,24 @@ public class WAStorageClient {
 			}
 		}
 		long endTime = System.currentTimeMillis();
-		listener.getLogger().println("Uploaded blob with uri "+ blob.getUri() + " in " + getTime(endTime - startTime));
+		listener.getLogger().println("Uploaded blob with uri " + blob.getUri() + " in " + getTime(endTime - startTime));
 	}
 
 	/**
 	 * Uploads files to Windows Azure Storage.
-	 * 
-         * @param run
+	 *
+	 * @param run
 	 * @param listener
-	 * @param StorageAccountInfo
-	 *            storage account information.
-	 * @param expContainerName
-	 *            container name.
-	 * @param cntPubAccess
-	 *            denotes if container is publicly accessible.
-	 * @param expFP
-	 *            File Path in ant glob syntax relative to CI tool workspace.
-	 * @param expVP
-	 *            Virtual Path of blob container.
-	 * @param excludeFP
-	 *            File Path in ant glob syntax to exclude from upload
-         * @param uploadType
-         * @param individualBlobs
-         * @param archiveBlobs
-         * 
+	 * @param StorageAccountInfo storage account information.
+	 * @param expContainerName container name.
+	 * @param cntPubAccess denotes if container is publicly accessible.
+	 * @param expFP File Path in ant glob syntax relative to CI tool workspace.
+	 * @param expVP Virtual Path of blob container.
+	 * @param excludeFP File Path in ant glob syntax to exclude from upload
+	 * @param uploadType
+	 * @param individualBlobs
+	 * @param archiveBlobs
+	 *
 	 * @return filesUploaded number of files that are uploaded.
 	 * @throws WAStorageException
 	 * @throws Exception
@@ -320,9 +307,9 @@ public class WAStorageClient {
 
 		try {
 //			FilePath workspacePath = build.getWorkspace();
-                        Map<String, String> envVars = run.getEnvironment(listener);
-                        FilePath workspacePath = new FilePath(new File(envVars.get("WORKSPACE")));
-                        
+			Map<String, String> envVars = run.getEnvironment(listener);
+			FilePath workspacePath = new FilePath(new File(envVars.get("WORKSPACE")));
+
 			if (workspacePath == null) {
 				listener.getLogger().println(
 						Messages.AzureStorageBuilder_ws_na());
@@ -332,11 +319,11 @@ public class WAStorageClient {
 
 			listener.getLogger().println(
 					Messages.WAStoragePublisher_uploading());
-                        
-                        if(manageArtifacts) {
-                            expContainerName = "jobs";
-                        }
-                        
+
+			if (manageArtifacts) {
+				expContainerName = "jobs";
+			}
+
 			CloudBlobContainer container = WAStorageClient
 					.getBlobContainerReference(strAcc.getStorageAccName(),
 							strAcc.getStorageAccountKey(),
@@ -356,7 +343,7 @@ public class WAStorageClient {
 				excludesWithoutZip = excludeFP + "," + excludesWithoutZip;
 			}
 			String archiveIncludes = "";
-			
+
 			while (strTokens.hasMoreElements()) {
 				String fileName = strTokens.nextToken();
 
@@ -383,13 +370,13 @@ public class WAStorageClient {
 						fileName = fileName.substring(0, embVPSepIndex);
 					}
 				}
-				
+
 				archiveIncludes += "," + fileName;
-				
+
 				// List all the paths without the zip archives.
 				FilePath[] paths = workspacePath.list(fileName, excludesWithoutZip);
 				filesUploaded += paths.length;
-				
+
 				URI workspaceURI = workspacePath.toURI();
 
 				if (paths.length != 0) {
@@ -417,12 +404,12 @@ public class WAStorageClient {
 
 							upload(listener, blob, src);
 
-							individualBlobs.add(new AzureBlob(blob.getName(),blob.getUri().toString().replace("http://", "https://")));
+							individualBlobs.add(new AzureBlob(blob.getName(), blob.getUri().toString().replace("http://", "https://")));
 						}
 					}
 				}
 			}
-			
+
 			if (filesUploaded != 0 && (uploadType != UploadType.INDIVIDUAL)) {
 				// Create a temp dir for the upload
 				FilePath tempPath = workspacePath.createTempDir(zipFolderName, null);
@@ -445,11 +432,11 @@ public class WAStorageClient {
 				upload(listener, blob, zipPath);
 				// Make sure to note the new blob as an archive blob,
 				// so that it can be specially marked on the azure storage page.
-				archiveBlobs.add(new AzureBlob(blob.getName(),blob.getUri().toString().replace("http://", "https://")));
+				archiveBlobs.add(new AzureBlob(blob.getName(), blob.getUri().toString().replace("http://", "https://")));
 
 				tempPath.deleteRecursive();
 			}
-			
+
 		} catch (Exception e) {
 			e.printStackTrace();
 			throw new WAStorageException(e.getMessage(), e.getCause());
@@ -459,7 +446,7 @@ public class WAStorageClient {
 
 	/**
 	 * Deletes contents of container
-	 * 
+	 *
 	 * @param container
 	 * @throws StorageException
 	 * @throws URISyntaxException
@@ -480,7 +467,7 @@ public class WAStorageClient {
 
 	/**
 	 * Deletes contents of virtual directory
-	 * 
+	 *
 	 * @param cloudBlobDirectory
 	 * @throws StorageException
 	 * @throws URISyntaxException
@@ -501,76 +488,76 @@ public class WAStorageClient {
 
 	/**
 	 * Downloads from Azure blob
-	 * 
-         * @param run
+	 *
+	 * @param run
 	 * @param listener
 	 * @param strAcc
-         * @param blobs
+	 * @param blobs
 	 * @param includePattern
 	 * @param excludePattern
 	 * @param downloadDirLoc
-         * @param flattenDirectories
+	 * @param flattenDirectories
 	 * @return
 	 * @throws WAStorageException
 	 */
 	public static int download(Run<?, ?> run,
 			TaskListener listener, StorageAccountInfo strAcc,
-			List<AzureBlob> blobs, String includePattern, String excludePattern, 
+			List<AzureBlob> blobs, String includePattern, String excludePattern,
 			String downloadDirLoc, boolean flattenDirectories)
 			throws WAStorageException {
 
 		int filesDownloaded = 0;
 		FilePath downloadDir = null;
 
-                for(AzureBlob blob: blobs){
-                    try {
-                            //FilePath workspacePath = run.getWorkspace();
-                            Map<String, String> envVars = run.getEnvironment(listener);
-                            FilePath workspacePath = new FilePath(new File(envVars.get("WORKSPACE")));
+		for (AzureBlob blob : blobs) {
+			try {
+				//FilePath workspacePath = run.getWorkspace();
+				Map<String, String> envVars = run.getEnvironment(listener);
+				FilePath workspacePath = new FilePath(new File(envVars.get("WORKSPACE")));
 
-                            if (workspacePath == null) {
-                                    listener.getLogger().println(
-                                                    Messages.AzureStorageBuilder_ws_na());
-                                    return filesDownloaded;
-                            }
+				if (workspacePath == null) {
+					listener.getLogger().println(
+							Messages.AzureStorageBuilder_ws_na());
+					return filesDownloaded;
+				}
 
-                            if (Utils.isNullOrEmpty(downloadDirLoc)) {
-                                    downloadDir = workspacePath;
-                            } else {
-                                    downloadDir = new FilePath(workspacePath, downloadDirLoc);
-                            }
+				if (Utils.isNullOrEmpty(downloadDirLoc)) {
+					downloadDir = workspacePath;
+				} else {
+					downloadDir = new FilePath(workspacePath, downloadDirLoc);
+				}
 
-                            if (!downloadDir.exists()) {
-                                    downloadDir.mkdirs();
-                            }
+				if (!downloadDir.exists()) {
+					downloadDir.mkdirs();
+				}
 
-                            listener.getLogger().println(
-                                            Messages.AzureStorageBuilder_downloading());
-                            
-                            URL blobURL = new URL(blob.getBlobURL());
-                            String filePath = blobURL.getFile();
+				listener.getLogger().println(
+						Messages.AzureStorageBuilder_downloading());
 
-                            CloudBlobContainer container = WAStorageClient
-                                            .getBlobContainerReference(strAcc.getStorageAccName(),
-                                                            strAcc.getStorageAccountKey(),
-                                                            strAcc.getBlobEndPointURL(), filePath.split("/")[1],
-                                                            false, true, null);
+				URL blobURL = new URL(blob.getBlobURL());
+				String filePath = blobURL.getFile();
 
-                            filesDownloaded += downloadBlobs(container, includePattern, excludePattern, 
-                                            downloadDir, flattenDirectories, listener, filePath);
+				CloudBlobContainer container = WAStorageClient
+						.getBlobContainerReference(strAcc.getStorageAccName(),
+								strAcc.getStorageAccountKey(),
+								strAcc.getBlobEndPointURL(), filePath.split("/")[1],
+								false, true, null);
 
-                    } catch (Exception e) {
-                            e.printStackTrace();
-                            throw new WAStorageException(e.getMessage(), e.getCause());
-                    }
-                }
+				filesDownloaded += downloadBlobs(container, includePattern, excludePattern,
+						downloadDir, flattenDirectories, listener, filePath);
+
+			} catch (Exception e) {
+				e.printStackTrace();
+				throw new WAStorageException(e.getMessage(), e.getCause());
+			}
+		}
 		return filesDownloaded;
 
 	}
-        
-        	/**
+
+	/**
 	 * Downloads from Azure blob
-	 * 
+	 *
 	 * @param run
 	 * @param listener
 	 * @param strAcc
@@ -578,13 +565,13 @@ public class WAStorageClient {
 	 * @param includePattern
 	 * @param excludePattern
 	 * @param downloadDirLoc
-         * @param flattenDirectories
+	 * @param flattenDirectories
 	 * @return
 	 * @throws WAStorageException
 	 */
 	public static int download(Run<?, ?> run,
 			TaskListener listener, StorageAccountInfo strAcc,
-			String expContainerName, String includePattern, String excludePattern, 
+			String expContainerName, String includePattern, String excludePattern,
 			String downloadDirLoc, boolean flattenDirectories)
 			throws WAStorageException {
 
@@ -593,9 +580,9 @@ public class WAStorageClient {
 
 		try {
 			//FilePath workspacePath = run.getWorkspace();
-                        Map<String, String> envVars = run.getEnvironment(listener);
-                        FilePath workspacePath = new FilePath(new File(envVars.get("WORKSPACE")));
-                        
+			Map<String, String> envVars = run.getEnvironment(listener);
+			FilePath workspacePath = new FilePath(new File(envVars.get("WORKSPACE")));
+
 			if (workspacePath == null) {
 				listener.getLogger().println(
 						Messages.AzureStorageBuilder_ws_na());
@@ -621,7 +608,7 @@ public class WAStorageClient {
 							strAcc.getBlobEndPointURL(), expContainerName,
 							false, true, null);
 
-			filesDownloaded = downloadBlobs(container, includePattern, excludePattern, 
+			filesDownloaded = downloadBlobs(container, includePattern, excludePattern,
 					downloadDir, flattenDirectories, listener);
 
 		} catch (Exception e) {
@@ -631,8 +618,8 @@ public class WAStorageClient {
 		return filesDownloaded;
 
 	}
-	
-	private static boolean blobPathMatches(String path, String[] includePatterns, String[] excludePatterns, 
+
+	private static boolean blobPathMatches(String path, String[] includePatterns, String[] excludePatterns,
 			boolean isFullPath) {
 		if (!isFullPath) {
 			// If we don't have a full path, we can't check for exclusions
@@ -641,41 +628,43 @@ public class WAStorageClient {
 			if (isPotentialMatch(path, includePatterns)) {
 				return true;
 			}
-		} else {
-			if (isExactMatch(path, includePatterns) && 
-					(excludePatterns == null || !isExactMatch(path, excludePatterns))) {
-				return true;
-			}
+		} else if (isExactMatch(path, includePatterns)
+				&& (excludePatterns == null || !isExactMatch(path, excludePatterns))) {
+			return true;
 		}
-		
+
 		return false;
 	}
-	
+
 	/**
-	 * Determines whether the path is an exact match to any of the provided patterns
+	 * Determines whether the path is an exact match to any of the provided
+	 * patterns
+	 *
 	 * @param path
 	 * @param patterns
-	 * @return 
+	 * @return
 	 */
 	private static boolean isExactMatch(String path, String[] patterns) {
 		AntPathMatcher matcher = new AntPathMatcher();
-		for (int i=0; i < patterns.length; i++) {
+		for (int i = 0; i < patterns.length; i++) {
 			if (matcher.match(patterns[i], path)) {
 				return true;
 			}
 		}
 		return false;
 	}
-	
+
 	/**
-	 * Determines whether the path is a potential match to any of the provided patterns
+	 * Determines whether the path is a potential match to any of the provided
+	 * patterns
+	 *
 	 * @param path
 	 * @param patterns
-	 * @return 
+	 * @return
 	 */
 	private static boolean isPotentialMatch(String path, String[] patterns) {
 		AntPathMatcher matcher = new AntPathMatcher();
-		for (int i=0; i < patterns.length; i++) {
+		for (int i = 0; i < patterns.length; i++) {
 			if (matcher.matchStart(patterns[i], path)) {
 				return true;
 			}
@@ -683,14 +672,14 @@ public class WAStorageClient {
 		return false;
 	}
 
-        	/**
+	/**
 	 * Downloads blobs from container
-	 * 
+	 *
 	 * @param container
 	 * @param includePattern
 	 * @param excludePattern
 	 * @param downloadDir
-         * @param flattenDirectories
+	 * @param flattenDirectories
 	 * @param listener
 	 * @return
 	 * @throws URISyntaxException
@@ -699,28 +688,28 @@ public class WAStorageClient {
 	 * @throws WAStorageException
 	 */
 	private static int downloadBlobs(CloudBlobContainer container,
-			String includePattern, String excludePattern, 
+			String includePattern, String excludePattern,
 			FilePath downloadDir, boolean flattenDirectories, TaskListener listener)
 			throws URISyntaxException, StorageException, IOException,
 			WAStorageException {
 
 		String[] includePatterns = includePattern.split(fpSeparator);
 		String[] excludePatterns = null;
-                
+
 		if (excludePattern != null) {
 			excludePatterns = excludePattern.split(fpSeparator);
 		}
-		
+
 		int filesDownloaded = 0;
 
 		for (ListBlobItem blobItem : container.listBlobs()) {
-                    
+
 			// If the item is a blob, not a virtual directory
 			if (blobItem instanceof CloudBlob) {
 				// Download the item and save it to a file with the same
 				// name
 				CloudBlob blob = (CloudBlob) blobItem;
-                                String blobPath = blob.getUri().getPath();
+				String blobPath = blob.getUri().getPath();
 
 				// Check whether we should download it.
 				if (blobPathMatches(blob.getName(), includePatterns, excludePatterns, true)) {
@@ -729,25 +718,25 @@ public class WAStorageClient {
 				}
 
 			} else if (blobItem instanceof CloudBlobDirectory) {
-                        CloudBlobDirectory blobDirectory = (CloudBlobDirectory) blobItem;
-                        filesDownloaded += downloadBlob(blobDirectory, includePatterns,
-                                excludePatterns, downloadDir, flattenDirectories, listener);
-                    }
+				CloudBlobDirectory blobDirectory = (CloudBlobDirectory) blobItem;
+				filesDownloaded += downloadBlob(blobDirectory, includePatterns,
+						excludePatterns, downloadDir, flattenDirectories, listener);
+			}
 		}
-		
+
 		return filesDownloaded;
 	}
-        
+
 	/**
 	 * Downloads blobs from container
-	 * 
+	 *
 	 * @param container
 	 * @param includePattern
 	 * @param excludePattern
 	 * @param downloadDir
-         * @param flattenDirectories
+	 * @param flattenDirectories
 	 * @param listener
-         * @param path
+	 * @param path
 	 * @return
 	 * @throws URISyntaxException
 	 * @throws StorageException
@@ -755,56 +744,56 @@ public class WAStorageClient {
 	 * @throws WAStorageException
 	 */
 	private static int downloadBlobs(CloudBlobContainer container,
-			String includePattern, String excludePattern, 
+			String includePattern, String excludePattern,
 			FilePath downloadDir, boolean flattenDirectories, TaskListener listener, String path)
 			throws URISyntaxException, StorageException, IOException,
 			WAStorageException {
 
 		String[] includePatterns = includePattern.split(fpSeparator);
 		String[] excludePatterns = null;
-                
+
 		if (excludePattern != null) {
 			excludePatterns = excludePattern.split(fpSeparator);
 		}
-		
+
 		int filesDownloaded = 0;
 
 		for (ListBlobItem blobItem : container.listBlobs()) {
-                    
+
 			// If the item is a blob, not a virtual directory
 			if (blobItem instanceof CloudBlob) {
 				// Download the item and save it to a file with the same
 				// name
 				CloudBlob blob = (CloudBlob) blobItem;
-                                String blobPath = blob.getUri().getPath();
+				String blobPath = blob.getUri().getPath();
 
 				// Check whether we should download it.
-                                // if (blobPathMatches(blob.getName(), includePatterns, excludePatterns, true) && (Utils.FWD_SLASH + path).equalsIgnoreCase(blobPath)) {
+				// if (blobPathMatches(blob.getName(), includePatterns, excludePatterns, true) && (Utils.FWD_SLASH + path).equalsIgnoreCase(blobPath)) {
 				if (blobPathMatches(blob.getName(), includePatterns, excludePatterns, true) && (path).equalsIgnoreCase(blobPath)) {
 					downloadBlob(blob, downloadDir, flattenDirectories, listener);
 					filesDownloaded++;
 				}
 
 			} else if (blobItem instanceof CloudBlobDirectory) {
-                        CloudBlobDirectory blobDirectory = (CloudBlobDirectory) blobItem;
-                        filesDownloaded += downloadBlob(blobDirectory, includePatterns,
-                                excludePatterns, downloadDir, flattenDirectories, listener, path);
-                    }
+				CloudBlobDirectory blobDirectory = (CloudBlobDirectory) blobItem;
+				filesDownloaded += downloadBlob(blobDirectory, includePatterns,
+						excludePatterns, downloadDir, flattenDirectories, listener, path);
+			}
 		}
-		
+
 		return filesDownloaded;
 	}
 
 	/**
 	 * Downloads blobs from virtual directory
-	 * 
+	 *
 	 * @param blobDirectory
-         * @param includePatterns
-         * @param excludePatterns
+	 * @param includePatterns
+	 * @param excludePatterns
 	 * @param downloadDir
-         * @param flattenDirectories
+	 * @param flattenDirectories
 	 * @param listener
-         * @param path
+	 * @param path
 	 * @return
 	 * @throws StorageException
 	 * @throws URISyntaxException
@@ -829,8 +818,7 @@ public class WAStorageClient {
 				// Download the item and save it to a file with the same
 				// name
 				CloudBlob blob = (CloudBlob) blobItem;
-                                String blobPath = blob.getUri().getPath();
-                                
+				String blobPath = blob.getUri().getPath();
 
 				if (blobPathMatches(blob.getName(), includePatterns, excludePatterns, true) && path.equalsIgnoreCase(blobPath)) {
 					downloadBlob(blob, downloadDir, flattenDirectories, listener);
@@ -838,22 +826,22 @@ public class WAStorageClient {
 				}
 			} else if (blobItem instanceof CloudBlobDirectory) {
 				CloudBlobDirectory blobDir = (CloudBlobDirectory) blobItem;
-				filesDownloaded += downloadBlob(blobDir, includePatterns, excludePatterns, 
+				filesDownloaded += downloadBlob(blobDir, includePatterns, excludePatterns,
 						downloadDir, flattenDirectories, listener, path);
 			}
 		}
 
 		return filesDownloaded;
 	}
-        
-        	/**
+
+	/**
 	 * Downloads blobs from virtual directory
-	 * 
+	 *
 	 * @param blobDirectory
-         * @param includePatterns
-         * @param excludePatterns
+	 * @param includePatterns
+	 * @param excludePatterns
 	 * @param downloadDir
-         * @param flattenDirectories 
+	 * @param flattenDirectories
 	 * @param listener
 	 * @return
 	 * @throws StorageException
@@ -879,8 +867,7 @@ public class WAStorageClient {
 				// Download the item and save it to a file with the same
 				// name
 				CloudBlob blob = (CloudBlob) blobItem;
-                                String blobPath = blob.getUri().getPath();
-                                
+				String blobPath = blob.getUri().getPath();
 
 				if (blobPathMatches(blob.getName(), includePatterns, excludePatterns, true)) {
 					downloadBlob(blob, downloadDir, flattenDirectories, listener);
@@ -888,21 +875,20 @@ public class WAStorageClient {
 				}
 			} else if (blobItem instanceof CloudBlobDirectory) {
 				CloudBlobDirectory blobDir = (CloudBlobDirectory) blobItem;
-				filesDownloaded += downloadBlob(blobDir, includePatterns, excludePatterns, 
+				filesDownloaded += downloadBlob(blobDir, includePatterns, excludePatterns,
 						downloadDir, flattenDirectories, listener);
 			}
 		}
 
 		return filesDownloaded;
 	}
-        
 
 	/**
 	 * Blob download from storage
-	 * 
+	 *
 	 * @param blob
 	 * @param downloadDir
-         * @param flattenDirectories
+	 * @param flattenDirectories
 	 * @param listener
 	 * @throws URISyntaxException
 	 * @throws StorageException
@@ -918,7 +904,6 @@ public class WAStorageClient {
 			// That filepath will contain all the directories and explicit virtual
 			// paths, so if the user wanted it flattened, grab just the file name and
 			// recreate the file path
-
 			if (flattenDirectories) {
 				downloadFile = new FilePath(downloadDir, downloadFile.getName());
 			}
@@ -934,8 +919,8 @@ public class WAStorageClient {
 			long endTime = System.currentTimeMillis();
 			listener.getLogger().println(
 					"blob " + blob.getName() + " is downloaded to "
-							+ downloadDir + " in "
-							+ getTime(endTime - startTime));
+					+ downloadDir + " in "
+					+ getTime(endTime - startTime));
 		} catch (Exception e) {
 			e.printStackTrace();
 			throw new WAStorageException(e.getMessage(), e.getCause());
@@ -951,9 +936,10 @@ public class WAStorageClient {
 		}
 
 	}
-	
+
 	/**
 	 * Generates SAS URL for blob in Azure storage account
+	 *
 	 * @param storageAccountName
 	 * @param storageAccountKey
 	 * @param containerName
@@ -963,12 +949,12 @@ public class WAStorageClient {
 	 */
 	public static String generateSASURL(String storageAccountName, String storageAccountKey, String containerName, String saBlobEndPoint) throws Exception {
 		StorageCredentialsAccountAndKey credentials = new StorageCredentialsAccountAndKey(storageAccountName, storageAccountKey);
-		URL blobURL = new  URL(saBlobEndPoint);
-		String saBlobURI = 	new StringBuilder().append(blobURL.getProtocol()).append("://").append(storageAccountName).append(".")
-							.append(blobURL.getHost()).append("/").toString();
-		CloudStorageAccount cloudStorageAccount = new CloudStorageAccount(credentials, new URI(saBlobURI), 
-				  new URI(getCustomURI(storageAccountName, QUEUE, saBlobURI)), 
-				  new URI(getCustomURI(storageAccountName, TABLE, saBlobURI)));
+		URL blobURL = new URL(saBlobEndPoint);
+		String saBlobURI = new StringBuilder().append(blobURL.getProtocol()).append("://").append(storageAccountName).append(".")
+				.append(blobURL.getHost()).append("/").toString();
+		CloudStorageAccount cloudStorageAccount = new CloudStorageAccount(credentials, new URI(saBlobURI),
+				new URI(getCustomURI(storageAccountName, QUEUE, saBlobURI)),
+				new URI(getCustomURI(storageAccountName, TABLE, saBlobURI)));
 		// Create the blob client.
 		CloudBlobClient blobClient = cloudStorageAccount.createCloudBlobClient();
 		CloudBlobContainer container = blobClient.getContainerReference(containerName);
@@ -982,14 +968,14 @@ public class WAStorageClient {
 		SharedAccessBlobPolicy policy = new SharedAccessBlobPolicy();
 		GregorianCalendar calendar = new GregorianCalendar(TimeZone.getTimeZone("UTC"));
 		calendar.setTime(new Date());
-		
+
 		//policy.setSharedAccessStartTime(calendar.getTime());
 		calendar.add(Calendar.HOUR, 1);
 		policy.setSharedAccessExpiryTime(calendar.getTime());
 		policy.setPermissions(EnumSet.of(SharedAccessBlobPermissions.READ));
 
 		BlobContainerPermissions containerPermissions = new BlobContainerPermissions();
-		containerPermissions.getSharedAccessPolicies().put("jenkins"+System.currentTimeMillis(), policy);
+		containerPermissions.getSharedAccessPolicies().put("jenkins" + System.currentTimeMillis(), policy);
 		container.uploadPermissions(containerPermissions);
 
 		// Create a shared access signature for the container.
@@ -1001,7 +987,7 @@ public class WAStorageClient {
 	/**
 	 * Returns Blob requests options - primarily sets concurrentRequestCount to
 	 * number of available cores
-	 * 
+	 *
 	 * @return
 	 */
 	private static BlobRequestOptions getBlobRequestOptions() {
